--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-jwt": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
