--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "mongodb": "^6.10.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
